crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Synthesized_methods_(9e6e6c7368530460).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 523
expression: snapshot
---
---
mdtest name: liskov.md - The Liskov Substitution Principle - Synthesized methods
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## mdtest_snippet.pyi

```
 1 | from dataclasses import dataclass
 2 | from typing import NamedTuple
 3 | 
 4 | @dataclass(order=True)
 5 | class Foo:
 6 |     x: int
 7 | 
 8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
10 | 
11 | # Specifying `order=True` on the subclass means that a `__lt__` method is generated that
12 | # is incompatible with the generated `__lt__` method on the superclass. We emit a diagnostic
13 | # on the class definition because the design of `order=True` dataclasses themselves violates
14 | # the Liskov Substitution Principle.
15 | @dataclass(order=True)
16 | class Bar2(Foo):  # error: [subclass-of-dataclass-with-order]
17 |     y: str
18 | 
19 | # Although this class does not override any methods of `Foo`, the design of the
20 | # `order=True` stdlib dataclasses feature itself violates the Liskov Substitution
21 | # Principle! Instances of `Bar3` cannot be substituted wherever an instance of `Foo` is
22 | # expected, because the generated `__lt__` method on `Foo` raises an error unless the r.h.s.
23 | # and `l.h.s.` have exactly the same `__class__` (it does not permit instances of `Foo` to
24 | # be compared with instances of subclasses of `Foo`).
25 | class Bar3(Foo): ...  # error: [subclass-of-dataclass-with-order]
26 | 
27 | class Eggs:
28 |     def __lt__(self, other: Eggs) -> bool: ...
29 | 
30 | # TODO: the generated `Ham.__lt__` method here incompatibly overrides `Eggs.__lt__`.
31 | # We could consider emitting a diagnostic here. As of 2025-11-21, mypy reports a
32 | # diagnostic here but pyright and pyrefly do not.
33 | @dataclass(order=True)
34 | class Ham(Eggs):
35 |     x: int
36 | 
37 | class Baz(NamedTuple):
38 |     x: int
39 | 
40 | class Spam(Baz):
41 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
```

# Diagnostics

```
warning[subclass-of-dataclass-with-order]: Class `Bar` inherits from dataclass `Foo` which has `order=True`
 --> src/mdtest_snippet.pyi:8:11
  |
6 |     x: int
7 |
8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
  |           ^^^
9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
  |
info: rule `subclass-of-dataclass-with-order` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `__lt__`
  --> src/mdtest_snippet.pyi:9:9
   |
 8 | class Bar(Foo):  # error: [subclass-of-dataclass-with-order]
 9 |     def __lt__(self, other: Bar) -> bool: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Foo.__lt__`
10 |
11 | # Specifying `order=True` on the subclass means that a `__lt__` method is generated that
   |
info: This violates the Liskov Substitution Principle
info: `Foo.__lt__` is a generated method created because `Foo` is a dataclass
 --> src/mdtest_snippet.pyi:5:7
  |
4 | @dataclass(order=True)
5 | class Foo:
  |       ^^^ Definition of `Foo`
6 |     x: int
  |
info: rule `invalid-method-override` is enabled by default

```

```
warning[subclass-of-dataclass-with-order]: Class `Bar2` inherits from dataclass `Foo` which has `order=True`
  --> src/mdtest_snippet.pyi:16:12
   |
14 | # the Liskov Substitution Principle.
15 | @dataclass(order=True)
16 | class Bar2(Foo):  # error: [subclass-of-dataclass-with-order]
   |            ^^^
17 |     y: str
   |
info: rule `subclass-of-dataclass-with-order` is enabled by default

```

```
warning[subclass-of-dataclass-with-order]: Class `Bar3` inherits from dataclass `Foo` which has `order=True`
  --> src/mdtest_snippet.pyi:25:12
   |
23 | # and `l.h.s.` have exactly the same `__class__` (it does not permit instances of `Foo` to
24 | # be compared with instances of subclasses of `Foo`).
25 | class Bar3(Foo): ...  # error: [subclass-of-dataclass-with-order]
   |            ^^^
26 |
27 | class Eggs:
   |
info: rule `subclass-of-dataclass-with-order` is enabled by default

```

```
error[invalid-method-override]: Invalid override of method `_asdict`
  --> src/mdtest_snippet.pyi:41:9
   |
40 | class Spam(Baz):
41 |     def _asdict(self) -> tuple[int, ...]: ...  # error: [invalid-method-override]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Definition is incompatible with `Baz._asdict`
   |
info: This violates the Liskov Substitution Principle
info: `Baz._asdict` is a generated method created because `Baz` inherits from `typing.NamedTuple`
  --> src/mdtest_snippet.pyi:37:7
   |
35 |     x: int
36 |
37 | class Baz(NamedTuple):
   |       ^^^^^^^^^^^^^^^ Definition of `Baz`
38 |     x: int
   |
info: rule `invalid-method-override` is enabled by default

```
